--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage{arxiv}
+
 
 \usepackage[utf8]{inputenc}
 \usepackage[english, russian]{babel}
@@ -50,7 +50,7 @@
 }
 \date{}
 
-\renewcommand{\shorttitle}{\textit{arXiv} Template}
+\newcommand{\shorttitle}{\textit{arXiv} Template}
 
 %%% Add PDF metadata to help others organize their library
 %%% Once the PDF is generated, you can check the metadata with
@@ -63,14 +63,11 @@ pdfkeywords={First keyword, Second keyword, More},
 }
 
 \begin{document}
-\maketitle
 
 \begin{abstract}
 	\lipsum[1]
 \end{abstract}
 
-
-\keywords{First keyword \and Second keyword \and More}
 
 \section{Introduction}
 \lipsum[2]
@@ -111,12 +108,6 @@ Here is an example usage of the two main commands (\verb+citet+ and \verb+citep+
 See Figure \ref{fig:fig1}. Here is how you add footnotes. \footnote{Sample of the first footnote.}
 \lipsum[11]
 
-\begin{figure}
-	\centering
-	\includegraphics[width=0.5\textwidth]{../figures/log_reg_cs_exp.eps}
-	\caption{Sample figure caption.}
-	\label{fig:fig1}
-\end{figure}
 
 \subsection{Tables}
 See awesome Table~\ref{tab:table}.
