Annotation draft written

--- a/paper/Kunin-Bogoiavlenskii2024VariableExpertsImprovement.tex
+++ b/paper/Kunin-Bogoiavlenskii2024VariableExpertsImprovement.tex
@@ -16,22 +16,21 @@
 
 
 
-\title{A template for the \emph{arxiv} style}
+\title{Изучение влияния гиперпараметров на точность алгоритма агрегирования экспертных прогнозов с переменным числом экспертов
+}
 
-\author{ David S.~Hippocampus\thanks{Use footnote for providing further
-		information about author (webpage, alternative
-		address)---\emph{not} for acknowledging funding agencies.} \\
-	Department of Computer Science\\
-	Cranberry-Lemon University\\
-	Pittsburgh, PA 15213 \\
-	\texttt{hippo@cs.cranberry-lemon.edu} \\
-	%% examples of more authors
-	\And
-	Elias D.~Striatum \\
-	Department of Electrical Engineering\\
-	Mount-Sheikh University\\
-	Santa Narimana, Levand \\
-	\texttt{stariate@ee.mount-sheikh.edu} \\
+\author{ Kунин-Богоявленский Сергей Михайлович \\
+Московский Физико-Tехнический Институт \\	
+%Department of Computer Science\\
+%	Cranberry-Lemon University\\
+%	Pittsburgh, PA 15213 \\
+%	\texttt{hippo@cs.cranberry-lemon.edu} \\
+%	%% examples of more authors
+%	Elias D.~Striatum \\
+%	Department of Electrical Engineering\\
+%	Mount-Sheikh University\\
+%	Santa Narimana, Levand \\
+%	\texttt{stariate@ee.mount-sheikh.edu} \\
 	%% \AND
 	%% Coauthor \\
 	%% Affiliation \\
@@ -62,10 +61,16 @@ pdfauthor={David S.~Hippocampus, Elias D.~Striatum},
 pdfkeywords={First keyword, Second keyword, More},
 }
 
+
 \begin{document}
+\maketitle
 
 \begin{abstract}
-	\lipsum[1]
+	Решается задача непрерывного машинного обучения. Использование агрегирования экспертных прогнозов - один из важных методов повышения точности предсказания. Исследование сосредотачивается на изучении влияния гиперпараметров на точность алгоритма агрегирования с переменным числом экспертов, предложенного в недавней работе. Нахождение оптимальных гиперпараметров может привести к высоким результатам и более широкому распространению данного метода предсказания. 
+\end{abstract}	
+\selectlanguage{english}
+\begin{abstract}
+	The problem of continuous machine learning is being solved. The use of aggregation of expert forecasts is one of the important methods to improve the accuracy of prediction. The research focuses on studying the effect of hyperparameters on the accuracy of the aggregation algorithm with a variable number of experts proposed in a recent paper. Finding optimal hyperparameters can lead to high results and wider dissemination of this prediction method.
 \end{abstract}
 
 
