--- a/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
+++ b/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
@@ -58,11 +58,11 @@
 
 \section{Introduction}
 %\noindent %this command is placed at the beginning of the first sentence of each paragraph/section only.
-This work is inspired by the existing algorithm [3], which is based on the Fixed Share and Mixing Past Posteriors method. 
+This work is inspired by the algorithm, developed in the article [3], considering online game of prediction with experts' advice. The data is presented as a time series, consisting of outcome pairs --- <<signal>> and <<response>>. 
 In contrast to the classical statistical theory of sequential prediction, we made no assumptions about the nature of the data (which could be deterministic, stochastic, etc.). 
 We used machine learning methods to build forecasters within a game-theoretic approach.
 The online learning master model considers a series of reference forecasters, referred to as experts, to build its opinion by combining their predictions.
-The data is presented as a time series, consisting of outcome pairs --- <<signal>> and <<response>>. 
+
 
 %\noindent
 The general prediction algorithm with expert advice follows this structure:
