--- a/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
+++ b/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
@@ -196,6 +196,13 @@ This allows formulating the main assumption underlying the application of the GM
 	\BibTitle{Prediction, Learning, and Games}.
 	Available at: \BibUrl{https://ii.uni.wroc.pl/~lukstafi/pmwiki/uploads/AGT/Prediction_Learning_and_Games.pdf}
 	
+\bibitem{ebook}
+	\BibAuthor{Hyndman,\,R.\,J. \& Athanasopoulos,\,G., 2nd edition}. 2018.
+	\BibTitle{Forecasting: Principles and Practice}.
+	\BibJournal{OTexts: Melbourne, Australia} .
+	Available at: \BibUrl{https://otexts.com/fpp2/}
+	
+	
 \bibitem{vvbook}
 	\BibAuthor{V.\,V'yugin}. 2022.
 	Matematicheskie osnovy mashinnogo obucheniya i prognozirovaniya	
