--- a/code/times.ipynb
+++ b/code/times.ipynb
@@ -29,11 +29,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c9f7c95-fc53-4cb5-999a-ae6a8cab2112",
+   "execution_count": 9,
+   "id": "c7c011d2-c8e3-490c-9590-03ccf5b5004d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from hypers import weight_hypers\n",
+    "from hypers import alpha_hypers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9c9f7c95-fc53-4cb5-999a-ae6a8cab2112",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43.416945547317454"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = np.arange(1, 10000)\n",
+    "\n",
+    "# hyper = weight_hypers[\"we\"]\n",
+    "# plt.plot(grid, func(grid))\n",
+    "np.sum(weights_func_slow(np.arange(1, 10000000)))"
+   ]
   },
   {
    "cell_type": "markdown",
