--- a/code/notebooks/times.ipynb
+++ b/code/notebooks/times.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cce758c7-ce77-40cf-be3e-18f5a021aa57",
    "metadata": {
     "ExecuteTime": {
@@ -17,9 +17,7 @@
     "import seaborn as sns\n",
     "import warnings\n",
     "import copy\n",
-    "from synthesizer import Synthesizer\n",
-    "from generator import Generator\n",
-    "from algorithm import Algorithm\n",
+    "\n",
     "\n",
     "# warnings.filterwarnings('ignore')\n",
     "plt.rcParams['figure.dpi'] = 80\n",
@@ -29,39 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c7c011d2-c8e3-490c-9590-03ccf5b5004d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from hypers import weight_hypers\n",
-    "from hypers import alpha_hypers"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9c9f7c95-fc53-4cb5-999a-ae6a8cab2112",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "43.416945547317454"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid = np.arange(1, 10000)\n",
-    "\n",
-    "# hyper = weight_hypers[\"we\"]\n",
-    "# plt.plot(grid, func(grid))\n",
-    "np.sum(weights_func_slow(np.arange(1, 10000000)))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -73,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "e45e733c-6e60-404a-8c46-5f4edb5ee8fd",
    "metadata": {},
    "outputs": [],
@@ -86,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "5a5955a1-89fc-449f-8617-31fdd37b723e",
    "metadata": {},
    "outputs": [],
@@ -119,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "71c18915-a9e8-4b30-af0d-cac5d88a083a",
    "metadata": {},
    "outputs": [],
@@ -167,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "faba26b7-73b3-4b89-9310-a9b09f496ff7",
    "metadata": {},
    "outputs": [],
@@ -212,17 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "070cc1ac-7ec9-4742-a3e5-b4693feb9e55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x116c4c310>"
+       "<matplotlib.legend.Legend at 0x15f8c2c50>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -246,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "c3c7b6f8-d35b-4ec4-8959-2b9c207dc2eb",
    "metadata": {},
    "outputs": [
@@ -279,17 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "546ca07b-47d6-4f98-9558-aa335c3cbcc9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x116e32410>]"
+       "[<matplotlib.lines.Line2D at 0x15fc2bb50>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -316,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "597f81b3-d39c-4b08-8334-552289da5a36",
    "metadata": {},
    "outputs": [],
@@ -329,17 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "be197feb-3e30-49b0-81b3-394c72b3d012",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11713c730>]"
+       "[<matplotlib.lines.Line2D at 0x15fbf1720>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -360,6 +338,38 @@
     "# plt.plot(y)\n",
     "# plt.plot(forecasted)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "045ea564-890b-4234-a24a-87d720619927",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c17d6c2-2c91-4546-a0cf-bac58ba0162c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56a14f5a-235b-43a0-8c4c-0f5b42f5ec5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d934567b-ba74-467a-9b3f-962a1fe59fe6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
